# adafits

./: README.rst  adafits-column_routines.ads  adafits-generic_column_routines.adb  adafits-generic_column_routines.ads  adafits.adb  adafits.ads  adafits.gpr  cfitsio.gpr.in  configure.ac
adafits/: adafits-column_routines.ads  adafits.ads
examples/: open_file.adb  read_table.adb
gnattest/harness/: adafits-column_routines-test_data-tests-suite.adb  adafits-column_routines-test_data-tests-suite.ads  adafits-test_data-tests-suite.adb  adafits-test_data-tests-suite.ads  b__test_runner.adb  b__test_runner.ads  gnattest.xml  gnattest_main_suite.adb  test_adafits.gpr  test_driver.gpr
gnattest/tests/: adafits-column_routines-test_data-tests-double_column-test_data-tests.ads  adafits-column_routines-test_data-tests-double_column-test_data.adb  adafits-column_routines-test_data-tests-double_column-test_data.ads  adafits-column_routines-test_data-tests-double_column.ads  adafits-column_routines-test_data-tests-float_column-test_data-tests.ads  adafits-column_routines-test_data-tests-float_column-test_data.adb  adafits-column_routines-test_data-tests-float_column-test_data.ads  adafits-column_routines-test_data-tests-float_column.ads  adafits-column_routines-test_data-tests-long_column-test_data-tests.ads  adafits-column_routines-test_data-tests-long_column-test_data.adb  adafits-column_routines-test_data-tests-long_column-test_data.ads  adafits-column_routines-test_data-tests-long_column.ads  adafits-column_routines-test_data-tests-short_column-test_data-tests.ads  adafits-column_routines-test_data-tests-short_column-test_data.adb  adafits-column_routines-test_data-tests-short_column-test_data.ads  adafits-column_routines-test_data-tests-short_column.ads  adafits-column_routines-test_data-tests.adb  adafits-column_routines-test_data-tests.ads  adafits-column_routines-test_data.adb  adafits-column_routines-test_data.ads  adafits-test_data-tests.adb  adafits-test_data-tests.ads  adafits-test_data.adb  adafits-test_data.ads
test_data/: image.fits
